# Raytracer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  build.sh  buildme.sh  cmake_install.cmake  image.ppm
.github/workflows/: code_working.yml
include/: raytracer.hpp  rtx.hpp
includes/: debug.hpp  hitData.hpp  raytracer.hpp  rtx.hpp
libs/rtx/: CMakeLists.txt
libs/rtx/src/: range.hpp
libs/rtx/src/color/: color.cpp  color.hpp  screen.cpp  screen.hpp
libs/rtx/src/ray/: ray.cpp
libs/rtx/src/vec3/: vec3.hpp
plugins/cameras/basicCamera/: CMakeLists.txt
plugins/cameras/basicCamera/src/: basicCamera.cpp  basicCamera.hpp
plugins/cameras/pixelCamera/: CMakeLists.txt
plugins/cameras/pixelCamera/src/: pixelCamera.cpp  pixelCamera.hpp
plugins/lights/: CMakeLists.txt  light.cpp  light.hpp
plugins/lights/ambientLight/: CMakeLists.txt
plugins/lights/ambientLight/src/: ambientLight.cpp  ambientLight.hpp
plugins/lights/directionalLight/: CMakeLists.txt
plugins/lights/directionalLight/src/: directionalLight.cpp  directionalLight.hpp
plugins/lights/pointLight/: CMakeLists.txt
plugins/lights/pointLight/src/: pointLight.cpp  pointLight.hpp
plugins/materials/defaultMaterial/: CMakeLists.txt
plugins/materials/defaultMaterial/src/: defaultMaterial.cpp  defaultMaterial.hpp
plugins/materials/emissiveMaterial/: CMakeLists.txt
plugins/materials/emissiveMaterial/src/: emissiveMaterial.cpp  emissiveMaterial.hpp
plugins/materials/glass/: CMakeLists.txt
plugins/materials/glass/src/: glass.cpp  glass.hpp
plugins/materials/metal/: CMakeLists.txt
plugins/materials/metal/src/: metal.cpp  metal.hpp
plugins/materials/textureMaterial/: CMakeLists.txt
plugins/materials/textureMaterial/src/: textureMaterial.cpp  textureMaterial.hpp
plugins/objects/: primitive.hpp  torus.cpp  torus.hpp
plugins/objects/cone/: CMakeLists.txt  cone.cpp  cone.hpp
plugins/objects/cone/src/: cone.cpp  cone.hpp
plugins/objects/cylinder/: CMakeLists.txt
plugins/objects/cylinder/src/: cylinder.cpp  cylinder.hpp
plugins/objects/quadrilatere/: CMakeLists.txt  quadrilatere.hpp
plugins/objects/quadrilatere/src/: quadrilatere.cpp  quadrilatere.hpp
plugins/objects/sphere/: CMakeLists.txt  sphere.hpp
plugins/objects/sphere/src/: sphere.cpp  sphere.hpp
plugins/objects/triangle/: CMakeLists.txt
plugins/objects/triangle/src/: triangle.cpp  triangle.hpp
plugins/textures/checkTexture/: CMakeLists.txt
plugins/textures/checkTexture/src/: checkTexture.cpp  checkTexture.hpp
plugins/textures/imageTexture/: CMakeLists.txt
plugins/textures/imageTexture/src/: imageTexture.cpp  imageTexture.hpp
plugins/textures/solidColor/: CMakeLists.txt
plugins/textures/solidColor/src/: solidColor.cpp  solidColor.hpp
scenes/: config.cfg  cube.cfg  scene1.cfg
settings/: config.cfg
src/: main.cpp
src/DLLoader/: DLLoader.hpp  DLSym.hpp
src/Setting/: Setting.hpp
src/parser/: Object.cpp  Object.hpp  Parser.cpp  Parser.hpp  Settings.cpp  Settings.hpp
src/process/: IParser.hpp  Software.cpp  Software.hpp  SoftwareDisplay.cpp  SoftwareDisplay.hpp  SoftwareWorld.cpp
src/raytracer/: camera.cpp  camera.hpp  hitData.hpp  main.cpp  world.cpp  world.hpp
src/raytracer/lights/: ambientLight.hpp  directionalLight.cpp  directionalLight.hpp  light.hpp  pointLight.cpp
src/raytracer/materials/: glass.hpp  material.hpp  metal.hpp  textureMaterial.hpp
src/raytracer/mats/: dielectric.hpp  lambertian.hpp  mat.hpp  metal.hpp
src/raytracer/objects/: object.hpp  sphere.cpp  sphere.hpp
src/raytracer/textures/: checkTexture.hpp
src/raytracing/: basicCamera.cpp  basicCamera.hpp  camera.hpp  hitData.hpp  world.cpp  world.hpp
src/raytracing/cameras/: camera.hpp
src/raytracing/lights/: directionalLight.hpp  light.hpp
src/raytracing/materials/: defaultMaterial.hpp  material.hpp
src/raytracing/objects/: cone.hpp  object.hpp  quadrilatere.cpp  sphere.hpp
src/raytracing/primitives/: primitive.hpp
src/raytracing/textures/: checkTexture.cpp  defaultTexture.hpp  solidColor.hpp  texture.hpp
src/rtx/: loading.hpp
src/rtx/ray/: ray.hpp
src/rtx/vec3/: vec3.cpp  vec3.hpp
